--- a/shop.html
+++ b/shop.html
@@ -2,35 +2,172 @@
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SportX Shop</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SportX - Store</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
     <style>
-        :root { --main: #27ae60; }
-        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #f0f2f5; -webkit-tap-highlight-color: transparent; }
-        .nav { background: var(--main); color: white; padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; height: 50px; }
-        .container { padding: 10px; display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; } /* মোবাইলে ২ কলাম */
-        .p-card { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 5px rgba(0,0,0,0.05); cursor: pointer; position: relative; }
-        .p-card img { width: 100%; height: 150px; object-fit: cover; }
-        .p-info { padding: 8px; text-align: left; }
-        .p-info h3 { font-size: 14px; margin: 5px 0; color: #333; height: 35px; overflow: hidden; }
-        .p-info b { color: var(--main); font-size: 16px; }
-        .stock-badge { position: absolute; top: 5px; right: 5px; background: rgba(0,0,0,0.6); color: white; padding: 2px 6px; border-radius: 4px; font-size: 10px; }
+        :root {
+            --primary: #00d2ff;
+            --secondary: #3a7bd5;
+            --dark: #0f172a;
+            --glass: rgba(255, 255, 255, 0.05);
+            --border: rgba(255, 255, 255, 0.1);
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            background: #0f172a;
+            color: white;
+        }
+
+        /* প্রফেশনাল নেভিবার */
+        nav {
+            background: rgba(15, 23, 42, 0.9);
+            backdrop-filter: blur(15px);
+            padding: 15px 25px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .logo { font-size: 24px; font-weight: 700; color: var(--primary); }
+
+        .cart-icon {
+            position: relative;
+            font-size: 20px;
+            cursor: pointer;
+            padding: 8px;
+            background: var(--glass);
+            border-radius: 50%;
+        }
+
+        .cart-count {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background: var(--primary);
+            color: white;
+            font-size: 10px;
+            padding: 2px 6px;
+            border-radius: 50%;
+        }
+
+        /* প্রোডাক্ট গ্রিড */
+        .container { padding: 20px; }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+            gap: 20px;
+        }
+
+        /* প্রোডাক্ট কার্ড */
+        .p-card {
+            background: var(--glass);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            overflow: hidden;
+            transition: 0.3s;
+            position: relative;
+            animation: fadeIn 0.8s ease;
+        }
+
+        .p-card:hover {
+            transform: translateY(-8px);
+            border-color: var(--primary);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .p-card img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+        }
+
+        .p-details { padding: 15px; }
+        .p-name { font-size: 16px; font-weight: 600; margin-bottom: 5px; }
+        .p-price { color: var(--primary); font-size: 18px; font-weight: bold; }
+
+        .btn-buy {
+            width: 100%;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 12px;
+            margin-top: 10px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: 0.2s;
+        }
+
+        .btn-buy:active { transform: scale(0.95); }
+
+        /* সাইডবার কার্ট */
+        .cart-sidebar {
+            position: fixed;
+            right: -100%;
+            top: 0;
+            width: 300px;
+            height: 100%;
+            background: #1e293b;
+            z-index: 2000;
+            box-shadow: -10px 0 30px rgba(0,0,0,0.5);
+            transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .cart-sidebar.active { right: 0; }
+
+        .close-cart { font-size: 24px; cursor: pointer; float: right; }
+
+        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+
+        /* মোবাইল ফ্রেন্ডলি অ্যাডজাস্টমেন্ট */
+        @media (max-width: 480px) {
+            .product-grid { grid-template-columns: 1fr 1fr; gap: 12px; }
+            .p-card img { height: 140px; }
+        }
     </style>
 </head>
 <body>
 
-<div class="nav">
-    <div style="font-weight: bold; font-size: 18px;">SportX</div>
-    <div id="user-initial" style="width:30px; height:30px; background:white; color:var(--main); border-radius:50%; display:flex; align-items:center; justify:center; font-weight:bold; cursor:pointer;" onclick="location.href='index.html'">U</div>
+<nav>
+    <div class="logo">SportX</div>
+    <div class="cart-icon" onclick="toggleCart()">
+        <i class="fa fa-shopping-cart"></i>
+        <span class="cart-count" id="cart-count">0</span>
+    </div>
+</nav>
+
+<div class="container">
+    <h2 style="margin-bottom: 25px; font-weight: 400;">Explore <span style="color:var(--primary)">Collection</span></h2>
+    <div class="product-grid" id="product-display">
+        </div>
 </div>
 
-<div class="container" id="product-list"></div>
+<div class="cart-sidebar" id="cart-sidebar">
+    <i class="fa fa-times close-cart" onclick="toggleCart()"></i>
+    <h3>Your Cart</h3>
+    <hr style="opacity: 0.1;">
+    <div id="cart-items"></div>
+    <div style="position: absolute; bottom: 20px; width: calc(100% - 40px);">
+        <button class="btn-buy" onclick="checkout()">Checkout Now</button>
+    </div>
+</div>
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-    const firebaseConfig = { 
+    const firebaseConfig = {
         apiKey: "AIzaSyCu8lgGs3Q-qLeedhngQAVXtt8BHOAlWDg",
         authDomain: "ms-sp-97f78.firebaseapp.com",
         databaseURL: "https://ms-sp-97f78-default-rtdb.firebaseio.com",
@@ -43,23 +180,61 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
+    // --- প্রোডাক্ট লোড করা ---
     onValue(ref(db, 'products'), (snapshot) => {
-        const list = document.getElementById('product-list');
-        list.innerHTML = "";
-        snapshot.forEach(child => {
-            const p = child.val();
-            list.innerHTML += `
-                <div class="p-card" onclick="location.href='product_details.html?id=${child.key}'">
-                    <span class="stock-badge">Stock: ${p.stock || 0}</span>
-                    <img src="${p.img}">
-                    <div class="p-info">
-                        <h3>${p.name}</h3>
-                        <b>${p.price} TK</b>
+        const display = document.getElementById('product-display');
+        display.innerHTML = "";
+        
+        if(snapshot.exists()) {
+            snapshot.forEach(child => {
+                const p = child.val();
+                const id = child.key;
+                display.innerHTML += `
+                    <div class="p-card">
+                        <img src="${p.img}" onerror="this.src='https://via.placeholder.com/150'">
+                        <div class="p-details">
+                            <div class="p-name">${p.name}</div>
+                            <div class="p-price">${p.price} ৳</div>
+                            <button class="btn-buy" onclick="addToCart('${id}', '${p.name}', ${p.price})">Add to Cart</button>
+                        </div>
                     </div>
-                </div>
-            `;
-        });
+                `;
+            });
+        } else {
+            display.innerHTML = "<p>No products found.</p>";
+        }
     });
+
+    // --- কার্ট ফাংশন ---
+    let cart = [];
+    window.toggleCart = () => {
+        document.getElementById('cart-sidebar').classList.toggle('active');
+    };
+
+    window.addToCart = (id, name, price) => {
+        cart.push({id, name, price});
+        updateCartUI();
+        // ছোট একটি ভাইব্রেশন বা ফিডব্যাক
+        alert(name + " added to cart!");
+    };
+
+    function updateCartUI() {
+        document.getElementById('cart-count').innerText = cart.length;
+        const list = document.getElementById('cart-items');
+        list.innerHTML = cart.map(item => `
+            <div style="margin-bottom:10px; font-size:14px; display:flex; justify-content:space-between;">
+                <span>${item.name}</span>
+                <b>${item.price} ৳</b>
+            </div>
+        `).join('');
+    }
+
+    window.checkout = () => {
+        if(cart.length === 0) return alert("Cart is empty!");
+        // এখানে পেমেন্ট বা অর্ডার পেজে পাঠানোর লজিক হবে
+        alert("Redirecting to checkout...");
+    };
+
 </script>
 </body>
 </html>
