--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SportX - Store</title>
+    <title>SportX - Exclusive Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -21,9 +21,9 @@
             margin: 0;
             background: #0f172a;
             color: white;
+            overflow-x: hidden;
         }
 
-        /* প্রফেশনাল নেভিবার */
         nav {
             background: rgba(15, 23, 42, 0.9);
             backdrop-filter: blur(15px);
@@ -39,27 +39,6 @@
 
         .logo { font-size: 24px; font-weight: 700; color: var(--primary); }
 
-        .cart-icon {
-            position: relative;
-            font-size: 20px;
-            cursor: pointer;
-            padding: 8px;
-            background: var(--glass);
-            border-radius: 50%;
-        }
-
-        .cart-count {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background: var(--primary);
-            color: white;
-            font-size: 10px;
-            padding: 2px 6px;
-            border-radius: 50%;
-        }
-
-        /* প্রোডাক্ট গ্রিড */
         .container { padding: 20px; }
         .product-grid {
             display: grid;
@@ -74,63 +53,54 @@
             border-radius: 20px;
             overflow: hidden;
             transition: 0.3s;
-            position: relative;
-            animation: fadeIn 0.8s ease;
-        }
-
-        .p-card:hover {
-            transform: translateY(-8px);
-            border-color: var(--primary);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-        }
-
-        .p-card img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-        }
-
-        .p-details { padding: 15px; }
-        .p-name { font-size: 16px; font-weight: 600; margin-bottom: 5px; }
-        .p-price { color: var(--primary); font-size: 18px; font-weight: bold; }
-
-        .btn-buy {
-            width: 100%;
-            background: linear-gradient(45deg, var(--primary), var(--secondary));
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 12px;
-            margin-top: 10px;
             cursor: pointer;
-            font-weight: 600;
-            transition: 0.2s;
         }
 
-        .btn-buy:active { transform: scale(0.95); }
+        .p-card:hover { transform: translateY(-8px); border-color: var(--primary); }
 
-        /* সাইডবার কার্ট */
-        .cart-sidebar {
+        .p-card img { width: 100%; height: 180px; object-fit: cover; }
+        .p-details { padding: 15px; }
+        .p-name { font-size: 15px; font-weight: 600; margin-bottom: 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .p-price { color: var(--primary); font-size: 17px; font-weight: bold; }
+
+        /* ডিটেইলস মোডাল (Modal) */
+        .modal {
+            display: none;
             position: fixed;
-            right: -100%;
-            top: 0;
-            width: 300px;
-            height: 100%;
-            background: #1e293b;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.8);
+            backdrop-filter: blur(8px);
             z-index: 2000;
-            box-shadow: -10px 0 30px rgba(0,0,0,0.5);
-            transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            justify-content: center;
+            align-items: center;
             padding: 20px;
             box-sizing: border-box;
         }
 
-        .cart-sidebar.active { right: 0; }
+        .modal-content {
+            background: #1e293b;
+            width: 100%;
+            max-width: 500px;
+            border-radius: 25px;
+            overflow: hidden;
+            position: relative;
+            animation: slideUp 0.4s ease;
+            border: 1px solid var(--border);
+        }
 
-        .close-cart { font-size: 24px; cursor: pointer; float: right; }
+        .modal-img { width: 100%; height: 250px; object-fit: cover; }
+        .modal-body { padding: 25px; }
+        .close-btn { position: absolute; top: 15px; right: 20px; font-size: 25px; cursor: pointer; color: white; z-index: 10; }
 
-        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+        .btn-action {
+            width: 100%;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            color: white; border: none; padding: 15px;
+            border-radius: 12px; font-weight: 600; cursor: pointer; margin-top: 20px;
+        }
 
-        /* মোবাইল ফ্রেন্ডলি অ্যাডজাস্টমেন্ট */
+        @keyframes slideUp { from { transform: translateY(50px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+
         @media (max-width: 480px) {
             .product-grid { grid-template-columns: 1fr 1fr; gap: 12px; }
             .p-card img { height: 140px; }
@@ -141,25 +111,28 @@
 
 <nav>
     <div class="logo">SportX</div>
-    <div class="cart-icon" onclick="toggleCart()">
-        <i class="fa fa-shopping-cart"></i>
-        <span class="cart-count" id="cart-count">0</span>
-    </div>
+    <div style="color:var(--primary); font-size: 14px;"><i class="fa fa-user"></i> Shop Live</div>
 </nav>
 
 <div class="container">
-    <h2 style="margin-bottom: 25px; font-weight: 400;">Explore <span style="color:var(--primary)">Collection</span></h2>
+    <h2 style="font-weight: 400; margin-bottom: 25px;">New <span style="color:var(--primary)">Arrivals</span></h2>
     <div class="product-grid" id="product-display">
         </div>
 </div>
 
-<div class="cart-sidebar" id="cart-sidebar">
-    <i class="fa fa-times close-cart" onclick="toggleCart()"></i>
-    <h3>Your Cart</h3>
-    <hr style="opacity: 0.1;">
-    <div id="cart-items"></div>
-    <div style="position: absolute; bottom: 20px; width: calc(100% - 40px);">
-        <button class="btn-buy" onclick="checkout()">Checkout Now</button>
+<div class="modal" id="productModal">
+    <div class="modal-content">
+        <span class="close-btn" onclick="closeModal()">&times;</span>
+        <img id="m-img" class="modal-img" src="">
+        <div class="modal-body">
+            <h2 id="m-name" style="margin:0; color:var(--primary);"></h2>
+            <p id="m-price" style="font-size: 20px; font-weight: bold; margin: 10px 0;"></p>
+            <p id="m-desc" style="color: #94a3b8; font-size: 14px; line-height: 1.6;"></p>
+            <div style="background: rgba(255,255,255,0.05); padding: 10px; border-radius: 10px; font-size: 13px;">
+                <i class="fa fa-box"></i> স্টক আছে: <span id="m-stock"></span> পিস
+            </div>
+            <button class="btn-action" onclick="orderNow()">অর্ডার করুন (Cash on Delivery)</button>
+        </div>
     </div>
 </div>
 
@@ -180,59 +153,54 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // --- প্রোডাক্ট লোড করা ---
+    let allProducts = {};
+
+    // --- প্রোডাক্ট লোড ও ডিসপ্লে ---
     onValue(ref(db, 'products'), (snapshot) => {
         const display = document.getElementById('product-display');
         display.innerHTML = "";
         
         if(snapshot.exists()) {
-            snapshot.forEach(child => {
-                const p = child.val();
-                const id = child.key;
+            allProducts = snapshot.val();
+            Object.keys(allProducts).forEach(key => {
+                const p = allProducts[key];
                 display.innerHTML += `
-                    <div class="p-card">
+                    <div class="p-card" onclick="openDetails('${key}')">
                         <img src="${p.img}" onerror="this.src='https://via.placeholder.com/150'">
                         <div class="p-details">
                             <div class="p-name">${p.name}</div>
                             <div class="p-price">${p.price} ৳</div>
-                            <button class="btn-buy" onclick="addToCart('${id}', '${p.name}', ${p.price})">Add to Cart</button>
                         </div>
                     </div>
                 `;
             });
-        } else {
-            display.innerHTML = "<p>No products found.</p>";
         }
     });
 
-    // --- কার্ট ফাংশন ---
-    let cart = [];
-    window.toggleCart = () => {
-        document.getElementById('cart-sidebar').classList.toggle('active');
+    // --- মোডাল ফাংশন ---
+    window.openDetails = (id) => {
+        const p = allProducts[id];
+        document.getElementById('m-img').src = p.img;
+        document.getElementById('m-name').innerText = p.name;
+        document.getElementById('m-price').innerText = p.price + " ৳";
+        document.getElementById('m-desc').innerText = p.description || "কোনো বর্ণনা নেই।";
+        document.getElementById('m-stock').innerText = p.stock || "0";
+        document.getElementById('productModal').style.display = 'flex';
     };
 
-    window.addToCart = (id, name, price) => {
-        cart.push({id, name, price});
-        updateCartUI();
-        // ছোট একটি ভাইব্রেশন বা ফিডব্যাক
-        alert(name + " added to cart!");
+    window.closeModal = () => {
+        document.getElementById('productModal').style.display = 'none';
     };
 
-    function updateCartUI() {
-        document.getElementById('cart-count').innerText = cart.length;
-        const list = document.getElementById('cart-items');
-        list.innerHTML = cart.map(item => `
-            <div style="margin-bottom:10px; font-size:14px; display:flex; justify-content:space-between;">
-                <span>${item.name}</span>
-                <b>${item.price} ৳</b>
-            </div>
-        `).join('');
-    }
+    window.orderNow = () => {
+        const name = document.getElementById('m-name').innerText;
+        alert(name + " অর্ডার করার জন্য আপনাকে অর্ডার পেজে পাঠানো হচ্ছে...");
+        window.location.href = "order_confirm.html?product=" + encodeURIComponent(name);
+    };
 
-    window.checkout = () => {
-        if(cart.length === 0) return alert("Cart is empty!");
-        // এখানে পেমেন্ট বা অর্ডার পেজে পাঠানোর লজিক হবে
-        alert("Redirecting to checkout...");
+    // বাইরে ক্লিক করলে মোডাল বন্ধ হওয়া
+    window.onclick = (event) => {
+        if (event.target == document.getElementById('productModal')) closeModal();
     };
 
 </script>
