--- a/shop.html
+++ b/shop.html
@@ -98,10 +98,10 @@
 <body>
 
 <header>
-    <div class="logo">SportX</div>
+    <div class="logo">MS STORE</div>
     <div class="header-right">
         <div class="search-box">
-            <input type="text" id="searchInput" placeholder="খুঁজুন..." onkeyup="searchFn()">
+            <input type="text" id="searchInput" placeholder="search..." onkeyup="searchFn()">
             <i class="fa fa-search"></i>
         </div>
         <button class="profile-btn" id="profileTrigger">
