--- a/shop.html
+++ b/shop.html
@@ -123,7 +123,7 @@
 <body>
 
 <header>
-    <div class="logo">SportX</div> 
+    <div class="logo">MS STORE</div> 
     <div class="header-right">
         <div class="search-box">
             <input type="text" id="searchInput" placeholder="খুঁজুন..." onkeyup="searchFn()">
