--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,6 @@
         
         .profile-btn { font-size: 32px; cursor: pointer; color: var(--primary); background: none; border: none; padding: 5px; display: flex; align-items: center; justify-content: center; transition: 0.2s; }
 
-        /* প্রোফাইল মেনু */
         .profile-menu { 
             display: none; position: fixed; top: 70px; right: 15px; 
             width: 260px; background: #1e293b; border-radius: 20px; 
@@ -53,7 +52,6 @@
         }
         .profile-menu.show { display: block; animation: slideIn 0.3s ease; }
 
-        /* আইডি কার্ড ডিজাইন */
         .id-box {
             background: rgba(0, 210, 255, 0.1);
             border: 1px dashed var(--primary);
@@ -124,8 +122,8 @@
 
 <div class="cat-grid">
     <div class="cat-item active" onclick="selectMainCat('All', this)"><i class="fa fa-th-large"></i><span>সব</span></div>
-    <div class="cat-item" onclick="selectMainCat('Sports', this)"><i class="fa fa-futbol"></i><span>স্পোর্টস</span></div>
-    <div class="cat-item" onclick="selectMainCat('Electronics', this)"><i class="fa fa-bolt"></i><span>ইলেক্ট্রো.</span></div>
+    <div class="cat-item" onclick="selectMainCat('Sports', this)"><i class="fa-solid fa-medal"></i><span>স্পোর্টস</span></div>
+    <div class="cat-item" onclick="selectMainCat('Electronics', this)"><i class="fa-solid fa-microchip"></i><span>ডিভাইস</span></div>
     <div class="cat-item" onclick="selectMainCat('Fashion', this)"><i class="fa fa-tshirt"></i><span>ফ্যাশন</span></div>
 </div>
 
@@ -157,13 +155,11 @@
         if (user) {
             document.getElementById('u-name').innerText = user.displayName || "User";
             document.getElementById('u-email').innerText = user.email;
-            // আইডি জেনারেট
             const shortID = user.uid.slice(-6).toUpperCase();
             document.getElementById('u-id').innerText = "#" + shortID;
         } else { location.href = "index.html"; }
     });
 
-    // কপি ফাংশন
     window.copyMyID = () => {
         const idText = document.getElementById('u-id').innerText;
         navigator.clipboard.writeText(idText).then(() => {
